--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Web Test</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Static Web Test</title>
+  <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 
 <body>
-    <h1>Hi, I'm Vincent.</h1>
-    <ul>
-        <li><a href="">Button</a></li>
-        <li><a href="">Button</a></li>
-        <li><a href="">Button</a></li>
-        <li><a href="">Button</a></li>
-        <li><a href="">Button</a></li>
-    </ul>
+  <h1>Hi, I'm Vincent.</h1>
+  <ul>
+    <li><a href="">Button</a></li>
+    <li><a href="">Button</a></li>
+    <li><a href="">Button</a></li>
+    <li><a href="">Button</a></li>
+    <li><a href="">Button</a></li>
+  </ul>
 </body>
 
 </html>
