--- a/index.html
+++ b/index.html
@@ -10,14 +10,44 @@
 </head>
 
 <body>
-  <h1>Hi, I'm Vincent.</h1>
-  <ul>
-    <li><a href="">Button</a></li>
-    <li><a href="">Button</a></li>
-    <li><a href="">Button</a></li>
-    <li><a href="">Button</a></li>
-    <li><a href="">Button</a></li>
-  </ul>
+  <div class="header">
+    <h1>Hi, I'm Vincent.</h1>
+  </div>
+  <div class="panels">
+    <div class="panel" tabindex="0">
+      <p>M</p>
+      <p>A</p>
+      <p>K</p>
+      <p>E</p>
+    </div>
+    <div class="panel" tabindex="0">
+      <p>W</p>
+      <p>O</p>
+      <p>R</p>
+      <p>L</p>
+      <p>D</p>
+    </div>
+    <div class="panel" tabindex="0">
+      <p>T</p>
+      <p>H</p>
+      <p>E</p>
+    </div>
+    <div class="panel" tabindex="0">
+      <p>B</p>
+      <p>E</p>
+      <p>T</p>
+      <p>T</p>
+      <p>E</p>
+      <p>R</p>
+    </div>
+    <div class="panel" tabindex="0">
+      <p>P</p>
+      <p>L</p>
+      <p>A</p>
+      <p>C</p>
+      <p>E</p>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
